--- a/src/app/productos/lista-productos/lista-productos.component.html
+++ b/src/app/productos/lista-productos/lista-productos.component.html
@@ -1,1 +1,12 @@
-<p>lista-productos works!</p>
+<div class="row p-3">
+    <div *ngFor="let item of productos" class="col-sm-3">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">{{item.nombre}}</h5>
+                <p class="card-text">{{item.descripcion}}</p>
+                <p class="card-text">Precio: ${{item.precio | number}}</p>
+                <a [routerLink]="'/producto/'+item._id.$oid" class="btn btn-primary">Ir al producto</a>
+            </div>
+        </div>
+    </div>
+</div>
