--- a/src/app/productos/lista-productos/lista-productos.component.html
+++ b/src/app/productos/lista-productos/lista-productos.component.html
@@ -1,12 +1,43 @@
-<div class="row p-3">
-    <div *ngFor="let item of productos" class="col-sm-3">
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-title">{{item.nombre}}</h5>
-                <p class="card-text">{{item.descripcion}}</p>
-                <p class="card-text">Precio: ${{item.precio | number}}</p>
-                <a [routerLink]="'/producto/'+item._id.$oid" class="btn btn-primary">Ir al producto</a>
-            </div>
-        </div>
-    </div>
+<div class="container mt-5">
+  <div *ngIf="productos.length == 0" class="text-center">
+    <img src="../../../assets/img/Cargando.gif" alt="Cargando..." />
+  </div>
+  <table class="table" *ngIf="productos.length != 0">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Marca</th>
+        <th scope="col">Descripción</th>
+        <th scope="col">Precio</th>
+        <th scope="col">Imagen</th>
+        <th scope="col">Acción</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of productos; index as i">
+        <th scope="row">{{ i + 1 }}</th>
+        <td>{{ item.nombre }}</td>
+        <td>{{ item.marca }}</td>
+        <td>{{ item.descripcion }}</td>
+        <td class="fw-bold">${{ item.precio | number }}</td>
+        <td>
+          <img
+            class="card-img-top img-fluid"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Drum_set.svg/1200px-Drum_set.svg.png"
+            alt="Card image cap"
+            style="height: 50px; width: 50px"
+          />
+        </td>
+        <td>
+          <button
+            class="btn btn-success"
+            [routerLink]="'/producto/' + item._id.$oid"
+          >
+            Ir a producto
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
