agrega imagen producto

--- a/src/app/productos/lista-productos/lista-productos.component.html
+++ b/src/app/productos/lista-productos/lista-productos.component.html
@@ -24,8 +24,8 @@
         <td>
           <img
             class="card-img-top img-fluid"
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Drum_set.svg/1200px-Drum_set.svg.png"
-            alt="Card image cap"
+            src="{{ item.imagen }}"
+            alt="{{ item.nombre }}"
             style="height: 50px; width: 50px"
           />
         </td>
